Adding Dockerfile and docker-compose.yml files for the start of a working Docker container See opt/docker/README.md
- Add docker specific configuration files to /opt/docker
- added some ignores to .gitignore
- .env.sample with default variables
- docker-compose.override.yml is development environment settings, not for use in production
- added Github Deploy key to /opt/docker/ssh
- Composer image bzip2 support in Alpine PHP7.1
- use kzap/composer image

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@ app/www/tests/_envs/*
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
+
+#Editor Files
+/nbproject/private/
+ace
+_ace
+*.doc
+*.docx
+.idea
+.DS_Store
+*.sublime-project
+*.sublime-workspace
+
+# Ignore Composer Directory
+vendor/
+
+# Docker files
+.env
+
+# Ignore Node Modules
+node_modules/
+
+# Vagrant dir
+.vagrant
